change background colors of popovers to make sure text is readable. remove description on mobile view

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -61,6 +61,7 @@
 
         a {
           display: inline-block;
+          letter-spacing: 3px;
           color: var(--dark-color);
           font-weight: 600;
           font-size: 22px;
